1944 [One-Click] audio language names added to the output file
1943 [AVS Script Creator] VideoPlayer preview starts in 1:1 mode
     [AVS Script Creator] while cropping VideoPlayer preview moves to the cropping border
     [VideoPlayer] fixed a sizing problem when window was minimized
     [VideoPlayer] fixed appearing unnecessary scrollbars in 1:1 mode
     [VideoPlayer] start window in top of other windows (excluding calling window)
     [Chapter Creator] + [AVS Cutter] VideoPlayer preview respect the "always on top" setting
1942 [VideoPlayer] fixed invisible right border in some OS (at least XP). Bug #3177073
1941 [XviD] replaced -lumimasking with -masking (requires xvid 1.3). Feature request #3139141
     [XviD] disabled direct mkv ouput
1940 [Log] changed version number syntax for MeGUI x64
1939 [Settings] added buttons to clear the default output directory and the path to neroaacenc. Feature request #3177293
1938 [One-Click] fixed language pre-selection if the default languages are not different. Bug #3178016
1937 [XviD] enhanced overflow handling in the settings dialogue
1936 audio encoding job can be added without existing input file
1935 AssumeFPS() added to DirectShow(), DSS2() and FFVideoSource() scripts
1934 [HD Streams Extractor] the default tracks will be pre-selected based upon the selected languages in the settings
     [Settings] added option to disable the pre-selecting of tracks in the HD Streams Extractor
     [Settings] removed unnecessary OggEnc2 checkbox
     [Settings] some cosmetics
1933 [One-Click] enhanced automatic de-interlacing logging
1932 [FFMSIndexer] fixed ignoring audio downmix mode
1931 [One-Click] improved default language pre-selection
1930 [x264] changed default value of --qpmax to 69 (requires x264 rev 1881+)
1929 [AutoEncode] zone handling added so that Intro and Credit selection in the video preview window will be respected
1928 [FFMSIndexer] fixed auto-load of audio tracks to the main input tab for some files. Bug #3165894